--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-output": "^3.0.1",
     "eslint-plugin-import": "^2.24.2",
-    "nodemon": "^2.0.12"
+    "express-winston": "^4.2.0",
+    "nodemon": "^2.0.12",
+    "winston": "^3.3.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
