--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-output": "^3.0.1",
     "eslint-plugin-import": "^2.24.2",
-    "express-winston": "^4.2.0",
-    "nodemon": "^2.0.12",
-    "winston": "^3.3.3"
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -32,6 +30,8 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "winston": "^3.3.3",
+    "express-winston": "^4.2.0"
   }
 }
